--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-brackets": "^0.4.7",
     "react-dom": "^18.2.0",
     "react-icons": "^4.10.1",
+    "react-toastify": "^9.1.3",
     "yup": "^1.2.0"
   },
   "devDependencies": {
